fixed horizontal overflow of hero image

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -22,6 +22,7 @@ body {
     font-weight: 40;
     color: $grayishBlue;
     line-height: 1.3; //allows spacing between lines
+    overflow-x: hidden;
 
     @include breakpoint-up (medium) {
         font-size: $font-med;
