--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -91,6 +91,7 @@ body {
   font-weight: 40;
   color: hsl(223deg, 8%, 62%);
   line-height: 1.3;
+  overflow-x: hidden;
 }
 @media (min-width: 45em) {
   body {
